--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 13:05:02 2018</p>
+         Last Run: Mon Nov  5 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,10 +30,10 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>24</td>
+                        <td>32</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
@@ -48,21 +48,21 @@
                         <td>21</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>14</td>
+                        <td>19</td>
                         <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
+                 "32",
                  "21",
-                 "14"
+                 "19"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "97",
-                 "96"
+                 "96",
+                 "95"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 13:05:02 2018</p>
+         Last Run: Mon Nov  5 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,26 +246,26 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-11</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-11</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>8</td>
+                        <td>W</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-11",
-                 "-11",
+                 "-13",
+                 "-13",
                  "-13"
                ]
              },
@@ -316,8 +316,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-8",
-                 "-8",
+                 "-9",
+                 "-9",
                  "-9"
                ]
              }
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "69",
-                 "70"
+                 "71",
+                 "71",
+                 "71"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
-                 "8",
-                 "7"
+                 "3",
+                 "5",
+                 "4"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 13:05:02 2018</p>
+         Last Run: Mon Nov  5 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>5</td>
-                        <td>55</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>67</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>Partly Cloudy</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>6</td>
-                        <td>53</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>71</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>5</td>
-                        <td>52</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>70</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "-1",
-                 "0"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
                  "3",
-                 "3"
+                 "4",
+                 "4"
                ]
              }
            ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "53",
-                 "52"
+                 "52",
+                 "50",
+                 "48"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
-                 "71",
-                 "70"
+                 "47",
+                 "56",
+                 "61"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 13:05:02 2018</p>
+         Last Run: Mon Nov  5 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,27 +675,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>15</td>
                         <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>15</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>62</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>57</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
                  "-3",
+                 "-2",
                  "-1"
                ]
              },
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "1",
                  "1",
                  "2"
                ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "62",
-                 "57"
+                 "42",
+                 "43",
+                 "45"
                ]
              }
            ]
