--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 14:05:02 2018</p>
+         Last Run: Mon Nov  5 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,10 +30,10 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>32</td>
+                        <td>22</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
@@ -45,24 +45,24 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>21</td>
-                        <td>73</td>
+                        <td>20</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>19</td>
-                        <td>74</td>
+                        <td>18</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "21",
-                 "19"
+                 "22",
+                 "20",
+                 "18"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "73",
-                 "74"
+                 "75",
+                 "76"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "96",
-                 "95"
+                 "97",
+                 "96"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 14:05:02 2018</p>
+         Last Run: Mon Nov  5 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -258,10 +258,10 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
-                        <td>3</td>
-                        <td>71</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>4</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -270,14 +270,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-13",
-                 "-13"
+                 "-14",
+                 "-14"
                ]
              },
              {
@@ -317,8 +317,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-9",
-                 "-9",
-                 "-9"
+                 "-10",
+                 "-10"
                ]
              }
            ]
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
+                 "4",
                  "3"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "71",
-                 "71"
+                 "74",
+                 "75",
+                 "74"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "3",
                  "5",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 14:05:02 2018</p>
+         Last Run: Mon Nov  5 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -480,11 +480,11 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
                         <td>5</td>
@@ -492,7 +492,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>61</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "47",
-                 "56",
-                 "61"
+                 "55",
+                 "59"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 14:05:02 2018</p>
+         Last Run: Mon Nov  5 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -695,7 +695,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "42",
-                 "43",
+                 "44",
                  "45"
                ]
              }
