--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 16:05:02 2018</p>
+         Last Run: Mon Nov  5 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>14</td>
-                        <td>74</td>
+                        <td>10</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
@@ -57,12 +57,12 @@
                         <td>Overcast</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>14</td>
+                        <td>12</td>
                         <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "14",
-                 "14"
+                 "11",
+                 "10",
+                 "12"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "74",
+                 "75",
                  "75"
                ]
              },
@@ -184,7 +184,7 @@
                "data":[
                  "97",
                  "97",
-                 "95"
+                 "96"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 16:05:02 2018</p>
+         Last Run: Mon Nov  5 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -254,19 +254,19 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>3</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>4</td>
                         <td>75</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>5</td>
+                        <td>WSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -278,7 +278,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-14",
+                 "-13",
                  "-14"
                ]
              },
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-9",
-                 "-10",
+                 "-9",
                  "-10"
                ]
              }
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
-                 "5",
-                 "5"
+                 "1",
+                 "1",
+                 "1"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 16:05:02 2018</p>
+         Last Run: Mon Nov  5 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -469,7 +469,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>47</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -479,9 +479,9 @@
                         <td>6</td>
                         <td>50</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>54</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -493,7 +493,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "54",
-                 "58"
+                 "44",
+                 "49",
+                 "53"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 16:05:02 2018</p>
+         Last Run: Mon Nov  5 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -676,39 +676,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>15</td>
-                        <td>49</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>42</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>15</td>
-                        <td>48</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NW</td>
-                        <td>44</td>
+                        <td>13</td>
+                        <td>NNW</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>45</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,8 +735,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-4",
                  "-3",
-                 "-2",
                  "-1"
                ]
              },
@@ -747,7 +747,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "1",
                  "2"
                ]
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "48",
-                 "46"
+                 "53",
+                 "51",
+                 "49"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "44",
-                 "45"
+                 "62",
+                 "62",
+                 "62"
                ]
              }
            ]
